--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
   
   <title>Four card feature section</title>
 
@@ -15,24 +16,49 @@
   </style>
 </head>
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
-
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
-
-  Supervisor
-  Monitors activity to identify project roadblocks
-
-  Team Builder
-  Scans our talent network to create the optimal team for your project
-
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
+  <section>
+    <div class="section-header">
+      <h2>
+        Reliable, efficient delivery
+      </h2>
+      <h1>
+        Powered by Technology
+      </h1>
+      <p>
+        Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful
+      </p>
+    </div>
+    <div>
+      <div class="card">
+        <h3>Supervisor</h3>
+        <p>Monitors activity to identify project roadblocks</p>
+        <div class="card-image">
+          <img src="./images/icon-supervisor.svg" alt="supervisor icon">
+        </div>
+      </div>
+      <div class="card">
+        <h3>Team Builder</h3>
+        <p>Scans our talent network to create the optimal team for your project</p>
+        <div class="card-image">
+          <img src="./images/icon-team-builder.svg" alt="team builder icon">
+        </div>
+      </div>
+      <div class="card">
+        <h3>Karma</h3>
+        <p>Regularly evaluates our talent to ensure quality</p>
+        <div class="card-image">
+          <img src="./images/icon-karma.svg" alt="karma icon">
+        </div>
+      </div>
+      <div class="card">
+        <h3>Calculator</h3>
+        <p>Uses data from past projects to provide better delivery estimates</p>
+        <div class="card-image">
+          <img src="./images/icon-calculator.svg" alt="calculator icon">
+        </div> 
+      </div>
+    </div>
+  </section>
 
   
   <footer>
